# project-templates

./: .gitignore  LICENSE.txt  README.md
cpp-cmake/: CMakeLists.txt
cpp-cmake/src/: main.cpp
cpp-make/: Makefile  config.mk
cppjit-make/: Makefile  config.mk
cppjit-make/src/: main.cpp
cppmeta-make/: Makefile
cppmeta-make/src/: main.cpp
cppx-make/: config.mk
cuda-cmake/: CMakeLists.txt
cuda-cmake/src/: okok.cu
cuda-make/: Makefile  config.mk
cuda-make/src/: main.cu
hpx-make/: Makefile  config.mk
hpx-make/src/: main.cpp
